[package]
name = "prometheus-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
sea-orm = { version = "0.9.2", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-chrono"], default-features = false }
tokio = { version = "1.20.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
